reproducer for folder resources